--- a/partials/footer.html
+++ b/partials/footer.html
@@ -6,7 +6,7 @@
   <div class="foot-right">
     <a href="https://www.instagram.com/systemnflow" target="_blank" rel="noopener">Instagram</a>
     <a href="https://www.tiktok.com/@systemnflow" target="_blank" rel="noopener">TikTok</a>
-    <a href="https://www.linkedin.com/company/system-n-flow" target="_blank" rel="noopener">LinkedIn</a>
+    <a href="https://www.linkedin.com/company/systemnflow" target="_blank" rel="noopener">LinkedIn</a>
     <span class="divider">•</span>
     <small>© <span class="year"></span> System &amp; Flow</small>
   </div>
