--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="wrap footer-min">
   <div class="foot-left">
-    <img src="/logo.png" alt="System & Flow logo" class="logo-icon" />
+    <img src="/assets/img/logo.png" alt="System & Flow" class="logo-icon" />
     <span class="brand">System &amp; Flow</span>
   </div>
 
